--- a/packages/ckeditor5-build-classic/package.json
+++ b/packages/ckeditor5-build-classic/package.json
@@ -46,6 +46,7 @@
     "@ckeditor/ckeditor5-typing": "^27.1.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^27.1.0",
     "@ckeditor/ckeditor5-core": "^27.1.0",
     "@ckeditor/ckeditor5-dev-utils": "^24.0.0",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.0.0",
