--- a/packages/ckeditor5-build-classic/package.json
+++ b/packages/ckeditor5-build-classic/package.json
@@ -43,6 +43,7 @@
     "@ckeditor/ckeditor5-theme-lark": "^27.1.0",
     "@ckeditor/ckeditor5-upload": "^27.1.0",
     "@wiris/mathtype-ckeditor5": "^7.26.1",
+    "ckeditor5-math": "^27.1.2",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^4.0.1",
     "style-loader": "^1.2.1",
